--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
 language: swift
-xcode_project: Sample-project-1/Sample-project-1.xcodeproj # path to your xcodeproj folder
+xcode_workspace: Sample-project-1/Sample-project-1.xcworkspace # path to your xcodeproj folder
 xcode_scheme: Sample-project-1
 xcode_destination: platform=iOS Simulator,OS=11.3,name=iPhone X
