--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+osx_image: xcode10.1
 language: swift
 xcode_workspace: Sample-project-1/Sample-project-1.xcworkspace # path to your xcodeproj folder
 xcode_scheme: Sample-project-1
