--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,9 @@ language: swift
 xcode_workspace: Sample-project-1/Sample-project-1.xcworkspace # path to your xcodeproj folder
 xcode_scheme: Sample-project-1
 xcode_destination: platform=iOS Simulator,OS=12.1,name=iPhone XR
+
+install:
+  - ./install_swiftlint.sh
+
+script:
+  - swiftlint
