--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,12 @@
 osx_image: xcode10.1
 language: swift
-xcode_workspace: Sample-project-1/Sample-project-1.xcworkspace # path to your xcodeproj folder
-xcode_scheme: Sample-project-1
-xcode_destination: platform=iOS Simulator,OS=12.1,name=iPhone XR
+# xcode_workspace: Sample-project-1/Sample-project-1.xcworkspace # path to your xcodeproj folder
+# xcode_scheme: Sample-project-1
+# xcode_destination: platform=iOS Simulator,OS=12.1,name=iPhone XR
 
-# install:
-#   - ./install_swiftlint.sh
+install:
+  - ./install_swiftlint.sh
 
-# script:
-#   - swiftlint
+script: 
+  - xcodebuild clean build -workspace Sample-project-1/Sample-project-1.xcworkspace -scheme Sample-project-1 -destination “platform=iOS Simulator, OS=12.1, name=iPhone XR”
+  - swiftlint
