--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,11 @@ language: swift
 # xcode_workspace: Sample-project-1/Sample-project-1.xcworkspace # path to your xcodeproj folder
 # xcode_scheme: Sample-project-1
 # xcode_destination: platform=iOS Simulator,OS=12.1,name=iPhone XR
-export TEST_DESTINATION="platform=iOS Simulator,name=iPhone XR,OS=12.1"
+
 
 install:
   - ./install_swiftlint.sh
 
 script: 
-  # - xcodebuild clean build -workspace Sample-project-1/Sample-project-1.xcworkspace -scheme Sample-project-1 -destination platform="iOS Simulator", OS="12.1", name="iPhone XR"
-  - xcodebuild clean build -workspace Sample-project-1/Sample-project-1.xcworkspace -scheme Sample-project-1 -destination "$TEST_DESTINATION"
+  - xcodebuild clean build -workspace Sample-project-1/Sample-project-1.xcworkspace -scheme Sample-project-1 -destination 'platform=iOS Simulator,name=iPhone XR,OS=12.1'
   - swiftlint
