--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ install:
   - ./install_swiftlint.sh
 
 script: 
-  - xcodebuild build -workspace Sample-project-1/Sample-project-1.xcworkspace -scheme Sample-project-1 -destination 'platform=iOS Simulator,name=iPhone XR,OS=12.1' | xcpretty
+  - xcodebuild build -workspace Sample-project-1/Sample-project-1.xcworkspace -scheme Sample-project-1 -destination 'platform=iOS Simulator,name=iPhone XR,OS=12.1' build test | xcpretty
   - swiftlint
