trying to run fastlane

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,10 @@ language: swift
 
 install:
   - ./install_swiftlint.sh
+  - bundle install
 
 script: 
   - swiftlint
+  - bundle exec fastlane screenshots
   - xcodebuild build -workspace Sample-project-1/Sample-project-1.xcworkspace -scheme Sample-project-1 -destination 'platform=iOS Simulator,name=iPhone XR,OS=12.1' build test | xcpretty
   
