--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ language: swift
 
 install:
   - ./install_swiftlint.sh
-  - sudo bundle install
+  - gem install bundler
+  - bundle install
 
 script: 
   - swiftlint
