--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -1,4 +1,4 @@
 excluded:
-  - Sample-project-1/Pods
-  - Sample-project-1/screenshots
-  - Sample-project-1/fastlane
+  - Pods
+  - screenshots
+  - fastlane
