changing screenshots -> snapshots

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,6 @@ install:
 
 script: 
   - swiftlint
-  - bundle exec fastlane screenshots
+  - bundle exec fastlane snapshots
   - xcodebuild build -workspace Sample-project-1/Sample-project-1.xcworkspace -scheme Sample-project-1 -destination 'platform=iOS Simulator,name=iPhone XR,OS=12.1' build test | xcpretty
   
